--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -28,3 +28,15 @@ body,
   height: 220px;
   top: 200px
 }
+
+.el-steps {
+  margin: 15px 0;
+}
+
+.el-step__title {
+  font-size: 13px;
+}
+
+.ql-editor {
+  min-height: 300px;
+}
